# ghostclaw-plugins

./: .gitignore  AGENT.md  CONTRIBUTING.md  PLUGINS.md  PLUGIN_API.md  README.md  github_org_setup.md
.agent/: workflow.md
.agent/skills/plugins-builder/: SKILL.md
plugins/ghostclaw-plugin-bandit/: PROJECT_SYMBOLS.md  README.md  pyproject.toml
plugins/ghostclaw-plugin-bandit/src/ghostclaw_plugin_bandit/: __init__.py
plugins/ghostclaw-plugin-bandit/src/ghostclaw_plugin_bandit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/ghostclaw-plugin-bandit/tests/: test_bandit.py  test_plugin.py
plugins/ghostclaw-plugin-coderabbit/: README.md  pyproject.toml
plugins/ghostclaw-plugin-coderabbit/src/ghostclaw_plugin_coderabbit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/ghostclaw-plugin-coderabbit/src/ghostclaw_plugin_coderabit/: plugin.py
plugins/ghostclaw-plugin-coderabbit/tests/: test_plugin.py
plugins/ghostclaw-plugin-logfire/: README.md  pyproject.toml  requirements-dev.txt
plugins/ghostclaw-plugin-logfire/src/ghostclaw_plugin_logfire/: __init__.py
plugins/ghostclaw-plugin-logfire/src/ghostclaw_plugin_logfire.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
plugins/ghostclaw-plugin-logfire/src/ghostclaw_plugin_logfire/analyzers/: __init__.py  config.py  instrumentation.py  patterns.py
plugins/ghostclaw-plugin-logfire/tests/: test_plugin.py
plugins/ghostclaw-plugin-orchestrator/: .gitignore  CONFIGURATION.example.json  MANIFEST.in  README.md  REVIEW.md  pyproject.toml  test_orchestrator_logic.py
plugins/ghostclaw-plugin-orchestrator/benchmark/: README.md  REPOS.txt  collect_results.sh  extract_metrics.py  quick_benchmark.py  run_experiment.sh
plugins/ghostclaw-plugin-orchestrator/src/ghost_orchestrator/: __init__.py  llm_client.py  llm_planner.py  models.py  orchestrator.py  plugin.py  vector_advisor.py
plugins/ghostclaw-plugin-orchestrator/test_plugin_demo/: pyproject.toml
plugins/ghostclaw-plugin-orchestrator/test_plugin_demo/ghost_orchestrator_demo/: plugin.py
plugins/ghostclaw-plugin-orchestrator/tests/: __init__.py  test_orchestrator.py
plugins/plugin-template/: README.md  pyproject.toml
plugins/plugin-template/src/ghostclaw_plugin_template/: __init__.py
plugins/plugin-template/tests/: test_plugin.py
