# pyproject.toml — Ghostclaw Logfire Plugin

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostclaw-plugin-logfire"
version = "0.1.0"
description = "Ghostclaw plugin for analyzing Pydantic Logfire observability integration"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name="Ghostclaw Team", email="team@ghostclaw.ai"}]
keywords = ["ghostclaw", "plugin", "logfire", "observability", "pydantic", "opentelemetry"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "ghostclaw>=0.2.1b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-cov",
    "black",
    "ruff",
]
logfire = [
    "logfire>=2.0.0",
]

[project.entry-points."ghostclaw.plugins"]
logfire = "ghostclaw_plugin_logfire:LogfirePlugin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I", "N", "UP", "BLE", "B", "A", "C4", "DTZ", "T10", "EM", "EXE", "ISC", "ICN", "G", "PIE", "PT", "Q", "RSE", "RET", "SIM", "TCH", "ARG", "PTH", "PD", "PLC", "PLE", "PLR", "PLW", "RUF"]
ignore = []
