[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ghost-orchestrator-demo"
version = "0.1.0"
description = "Minimal test plugin for Ghostclaw orchestrator"
authors = [{name = "Test"}]
requires-python = ">=3.10"
dependencies = [
    "ghostclaw>=0.2.1b0",
]

[project.entry-points."ghostclaw.plugins"]
demo = "ghost_orchestrator_demo.plugin:OrchestratorDemoPlugin"
